Fix border on pill in collapsed sidebar

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -1550,6 +1550,7 @@ svg.octicon path {
 	white-space: nowrap;
 	border-radius: 20px;
 	margin-right: 2px;
+	border-style: none;
 }
 
 .pill-overflow {
